force-app/main/default/objects/PricebookEntry/fields/cpqma_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>cpqma_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>CPQ External Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>