force-app/main/default/objects/PricebookEntry/fields/PricebookExternalId__c.field-meta.xml
<CustomField>
    <fullName>PricebookExternalId__c</fullName>
    <formula>Pricebook2.Id</formula>
    <label>PricebookExternalId</label>
    <type>Text</type>
</CustomField>