force-app/main/default/objects/PricebookEntry/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <formula>Product2.cpqma_ExternalId__c</formula>
    <label>ProductExternalId</label>
    <type>Text</type>
</CustomField>